<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item android:title="Cooking Ideas">
            <menu>
                <item
                    android:id="@+id/nav_dinner"
                    android:icon="@drawable/ic_serving_dish"
                    android:title="@string/menu_dinner" />


            </menu>
        </item>

        <item android:title="My cooking space">

            <menu>
                <item
                    android:id="@+id/nav_myCookBook"
                    android:icon="@drawable/ic_open_book"
                    android:title="@string/menu_myCookBook" />

                <item
                    android:id="@+id/nav_groceryList"
                    android:icon="@drawable/ic_shopping_list"
                    android:title="@string/menu_groceryList" />

            </menu>
        </item>
    </group>

    <item android:title="Settings">

        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/Settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logOut" />
        </menu>
    </item>
</menu>


