<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/orange">


    <EditText
       style="@style/App_EditTextStyle"
        android:id="@+id/registerName"
        android:hint="@string/hint_name"/>
    <EditText
        style="@style/App_EditTextStyle"
        android:id="@+id/registerEmail"
        android:hint="@string/hint_email"/>
    <EditText
        style="@style/App_EditTextStyle"
        android:id="@+id/registerPassword"
        android:hint="@string/hint_password"
        android:inputType="textPassword"/>
    <EditText
        style="@style/App_EditTextStyle"
        android:id="@+id/confirmPassword"
        android:hint="@string/hint_password_repeat"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/button_register"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/registerMess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/do_have_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        fb:layout_constraintTop_toBottomOf="@+id/loginButton"
        tools:layout_editor_absoluteX="0dp"></TextView>

    <TextView
        android:id="@+id/backToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_login"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        fb:layout_constraintTop_toBottomOf="@+id/registerMess"
        tools:layout_editor_absoluteX="0dp"></TextView>


    <TextView
        android:id="@+id/registerOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        fb:layout_constraintTop_toBottomOf="@+id/registerTextView"
        tools:layout_editor_absoluteX="0dp"></TextView>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebookLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        fb:layout_constraintEnd_toEndOf="parent"
        fb:layout_constraintHorizontal_bias="0.497"
        fb:layout_constraintStart_toStartOf="parent"
        fb:layout_constraintTop_toBottomOf="@+id/registerOr" />



</LinearLayout>